--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>HIho 這裡是首頁</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Kazmaku</title>
+</head>
+<body>
+    <h1>HIho 這裡是首頁</h1>
+    <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="qBOEzQa" data-user="carolineartz" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+    <span>See the Pen <a href="https://codepen.io/carolineartz/pen/qBOEzQa">
+    Bongo Cat Codes #2 - Jamming</a> by Caroline Artz (<a href="https://codepen.io/carolineartz">@carolineartz</a>)
+    on <a href="https://codepen.io">CodePen</a>.</span>
+    </p>
+    <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+</body>
+</html>
